<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">图书馆</string>
    <string name="hello_world">Hello world!</string>
    <string name="recommend">推荐</string>
    <string name="news">动态</string>
    <string name="search">搜索</string>
    <string name="mine">我的</string>
    <string name="loadfailed">加载失败</string>
    <string name="hotrank">热门排行榜</string>
    <string name="dateselect">请选择您要查询的月份：</string>
    <string name="submit">提交</string>
    <string name="loading">正在努力加载...</string>
    <string name="loaddates">正在获取时间列表...</string>
    <string name="username">姓名</string>
    <string name="passwd">卡号</string>
    <string name="cancel">取消</string>
    <string name="login">登录</string>
    <string name="myrecord">借阅历史</string>
    <string name="curr">目前借书</string>
    <string name="logout">退出登录</string>
    <string name="searchdes">输入关键字</string>
    <string name="storeinfo">查看馆藏信息</string>
</resources>
