<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="horizontal"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="bottom"
    android:id="@+id/title">
    
    <Button 
        android:id="@+id/recmdButton"
        android:text="@string/recommend"
        android:drawableTop="@android:drawable/ic_menu_agenda"
        android:textSize="6pt"
        android:background="@android:color/background_light"
        android:paddingBottom="3dp"
        android:paddingTop="3dp"
        android:layout_height="wrap_content"
        android:layout_width="wrap_content"
        android:layout_weight="1"
        style="?android:attr/buttonBarButtonStyle"        
        />
    <Button 
        android:id="@+id/newsButton"
        android:text="@string/news"
        android:drawableTop="@android:drawable/ic_menu_directions"
        android:textSize="6pt"
        android:background="@android:color/background_light"
        android:paddingBottom="3dp"
        android:paddingTop="3dp"
        android:layout_height="wrap_content"
        android:layout_width="wrap_content"
        android:layout_weight="1"
        style="?android:attr/buttonBarButtonStyle"        
        />
    <Button 
        android:id="@+id/searchButton"
        android:text="@string/search"
        android:drawableTop="@android:drawable/ic_menu_compass"
        android:textSize="6pt"
        android:background="@android:color/background_light"
        android:paddingBottom="3dp"
        android:paddingTop="3dp"
        android:layout_height="wrap_content"
        android:layout_width="wrap_content"
        android:layout_weight="1"
        style="?android:attr/buttonBarButtonStyle"        
        />
    <Button 
        android:id="@+id/mineButton"
        android:text="@string/mine"
        android:drawableTop="@android:drawable/ic_menu_gallery"
        android:textSize="6pt"
        android:background="@android:color/background_light"
        android:paddingBottom="3dp"
        android:paddingTop="3dp"
        android:layout_height="wrap_content"
        android:layout_width="wrap_content"
        android:layout_weight="1"
        style="?android:attr/buttonBarButtonStyle"        
        />        
</LinearLayout>